--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.4</version>
+
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -45,6 +46,12 @@
             <version>1.1.3</version>
         </dependency>
     </dependencies>
+<properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
 
+
+
+</properties>
 
 </project>
