--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,15 @@
     <version>3.8.0</version>
     <classifier>models</classifier>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>3.3</version>
+    </dependency>
 
-    </dependencies>
+
+</dependencies>
 
     <build>
         <plugins>
