--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,32 @@
         <artifactId>opencsv</artifactId>
         <version>3.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-translate -->
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-translate</artifactId>
+        <version>v2-rev10-1.13.2-beta</version>
+    </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.googlecode/google-api-translate-java -->
+    <dependency>
+        <groupId>com.googlecode</groupId>
+        <artifactId>google-api-translate-java</artifactId>
+        <version>0.92</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.nervepoint/google-translate-v2-java-maven-plugin -->
+    <dependency>
+        <groupId>com.nervepoint</groupId>
+        <artifactId>google-translate-v2-java-maven-plugin</artifactId>
+        <version>0.0.3</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-translate -->
+    <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-translate</artifactId>
+        <version>0.3.0</version>
+    </dependency>
 
 </dependencies>
 
