--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,11 @@
         <version>3.3</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
     <dependency>
-        <groupId>gov.nist.math</groupId>
-        <artifactId>jama</artifactId>
-        <version>1.0.3</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-csv</artifactId>
+        <version>1.1</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/de.julielab/aliasi-lingpipe -->
